--- a/index.html
+++ b/index.html
@@ -1217,12 +1217,27 @@
             <p class="intro">Nous vous proposons des coupes parfaitement maîtrisées, modernes et qui vous ressemblent. Mais au-delà de la technique, c'est toute une expérience que nous créons pour vous.</p>
             <div class="why-us-grid">
                 <div class="why-us-card">
-                    <div class="why-us-icon">🤗</div>
+                    <div class="why-us-icon">
+                        <img src="https://images.unsplash.com/photo-1560066984-138dadb4c035?w=200&q=80" alt="Accueil">
+                    </div>
                     <h3>Accueil Chaleureux</h3>
-                    <p>Dès que vous franchissez notre porte, vous entrez dans un univers où vous êtes unique. Café, thé, sourires sincères : nous prenons le temps de vous écouter et de comprendre vos envies avant même de toucher vos cheveux.</p>
+                    <p>Dès que vous franchissez notre porte, vous entrez dans un univers où vous êtes unique. Café, thé, sourires sincères : nous prenons le temps de vous écouter.</p>
                 </div>
                 <div class="why-us-card">
-                    <div class="why-us-icon">🎓</div>
+                    <div class="why-us-icon">
+                        <img src="https://images.unsplash.com/photo-1562322140-8baeececf3df?w=200&q=80" alt="Équipe">
+                    </div>
+                    <h3>Équipe Qualifiée</h3>
+                    <p>Nos huit coiffeurs cumulent plus de 70 ans d'expérience. Formés aux dernières techniques, ils maîtrisent tous les types de cheveux.</p>
+                </div>
+                <div class="why-us-card">
+                    <div class="why-us-icon">
+                        <img src="https://images.unsplash.com/photo-1522337660859-02fbefca4702?w=200&q=80" alt="Conseils">
+                    </div>
+                    <h3>Conseils Avisés</h3>
+                    <p>Nous analysons votre visage, votre style de vie, l'entretien que vous pouvez y consacrer. Le résultat ? Une coupe qui vous va vraiment.</p>
+                </div>
+            </div>="why-us-icon">🎓</div>
                     <h3>Équipe Qualifiée</h3>
                     <p>Nos huit coiffeurs cumulent plus de 70 ans d'expérience. Formés aux dernières techniques parisiennes et internationales, en formation continue permanente, ils maîtrisent tous les types de cheveux et toutes les textures.</p>
                 </div>
