--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-                        url('https://images.unsplash.com/photo-1560066984-138dadb4c035?w=1920&q=80');
+            background: linear-gradient(#c9a961, rgb(69 38 0 / 14%)), url('https://images.unsplash.com/photo-1560066984-138dadb4c035?w=1920&q=80');
+            /* background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),  */      
             background-size: cover;
             background-position: center;
             display: flex;
